@@ -1,0 +1,3 @@
+#species <- hoardeR::species
+#species$Ensembl.Assembly[species$Scientific.name=="Homo sapiens"] <- "GRCh38"
+#save(species,file="/home/ejo138/GitHub/hoardeR/data/species.rda")
