@@ -1,0 +1,3 @@
+.onLoad <- function(libname, pkgname) {
+  data("species", package="hoardeR", envir=parent.env(environment()))
+}
